# fuzzydate

./: Cargo.toml  GRAMMAR.md  LICENSE  README.md  andrew.txt
.github/workflows/: release.yml  tests.yml
examples/: stdin.rs
fuzzydate/: Cargo.toml  README.md
fuzzydate-cli/: Cargo.toml  README.md
fuzzydate-cli/src/: main.rs
fuzzydate/src/: ast.rs  lexer.rs  lib.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs
