[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Devin Vander Stelt"]
keywords = ["date", "time", "parse", "fuzzy", "string"]
categories = [
    "accessibility",
    "date-and-time",
    "parser-implementations",
    "text-processing",
]
license = "MIT"
repository = "https://github.com/DevinVS/fuzzydate"

[workspace]
resolver = "2"
members = ["fuzzydate", "fuzzydate-cli"]
