[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Devin Vander Stelt", "Connor Keane"]
keywords = ["date", "time", "parse", "fuzzy", "string"]
categories = [
    "accessibility",
    "date-and-time",
    "parser-implementations",
    "text-processing",
]
license = "MIT"
repository = "https://github.com/DevinVS/fuzzydate"

[workspace]
resolver = "2"
members = ["fuzzydate", "fuzzydate-cli"]

[patch.crates-io]
# Override the published `fuzzydate` crate with the local path for development
fuzzydate = { path = "fuzzydate" }
