[package]
name = "fuzzydate-cli"
description = "Command line interface to the fuzzydate library"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fuzzydate = {path = "../fuzzydate" }
clap = {version = "4.5", features=["derive"]}
anyhow = "1.0"
chrono-tz = "0.10.4"
chrono = { version = "0.4.42", features = ["clock"] }

[[bin]]
name = "fuzzydate"
path = "src/main.rs"
