[package]
name = "fuzzydate"
description = "A flexible natural language date parsing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
thiserror = "1.0"
clap = {version = "4.5", features=["derive"], optional = true}
anyhow = {version = "1.0", optional = true}
